--- a/신분증/index.html
+++ b/신분증/index.html
@@ -68,7 +68,7 @@
                     </div>
                 </div>
 
-                <button class="start-btn">나의 신분증 발급 안내 받기</button>
+                <button class="start-btn" onclick="startTest()">나의 신분증 발급 안내 받기</button>
                 
                 <div class="share-section">
                     <div class="kakao-share">
