--- a/에겐/index.html
+++ b/에겐/index.html
@@ -50,7 +50,7 @@
                         <span class="desc">순수한 여성</span>
                     </div>
                 </div>
-                <button class="start-btn">성향 분석 시작하기</button>
+                <button class="start-btn" onclick="startTest()">성향 분석 시작하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
                         <div class="kakao-icon"></div>
