--- a/운전면허반납/index.html
+++ b/운전면허반납/index.html
@@ -86,7 +86,7 @@
                     </div>
                 </div>
 
-                <button class="start-btn">
+                <button class="start-btn" onclick="startTest()">
                     <span class="btn-text">내가 받을 수 있는 혜택 확인하기</span>
                     <span class="btn-icon">🔍</span>
                 </button>
