--- a/의료지원금/index.html
+++ b/의료지원금/index.html
@@ -48,7 +48,7 @@
                         <span class="text">정밀 검사</span>
                     </div>
                 </div>
-                <button class="start-btn">지원 자격 확인하기</button>
+                <button class="start-btn" onclick="startTest()">지원 자격 확인하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
                         <div class="kakao-icon"></div>
