--- a/주정차/index.html
+++ b/주정차/index.html
@@ -46,7 +46,7 @@
                         <span class="text">무료 서비스</span>
                     </div>
                 </div>
-                <button class="start-btn">내 지역 확인하기</button>
+                <button class="start-btn" onclick="startTest()">내 지역 확인하기</button>
                 <div class="share-btn">
                     <div class="kakao-share">
                         <div class="kakao-icon"></div>
