--- a/통신비/index.html
+++ b/통신비/index.html
@@ -46,7 +46,7 @@
                         <span class="text">무료 조회</span>
                     </div>
                 </div>
-                <button class="start-btn">내 지역 조회방법 확인</button>
+                <button class="start-btn" onclick="startTest()">내 지역 조회방법 확인</button>
                 <div class="share-btn">
                     <div class="kakao-share">
                         <div class="kakao-icon"></div>
