--- a/실버타운/index.html
+++ b/실버타운/index.html
@@ -163,8 +163,8 @@
             </div>
             
             <div class="action-buttons">
-                <button class="primary-btn">다른 테스트 하기</button>
-                <button class="kakao-share">카톡 공유하기</button>
+                <button class="primary-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">다른 테스트 하기</button>
+                <button class="kakao-share" onclick="shareKakao()">카톡 공유하기</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
             </div>
         </div>
