--- a/실버타운/index.html
+++ b/실버타운/index.html
@@ -163,7 +163,8 @@
             </div>
             
             <div class="action-buttons">
-                <button class="primary-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">다른 테스트 하기</button>
+                <button class="primary-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">상세 정보 보기</button>
+                <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="kakao-share" onclick="shareKakao()">카톡 공유하기</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
             </div>
