--- a/자동차리스/index.html
+++ b/자동차리스/index.html
@@ -207,6 +207,7 @@
             
             <div class="action-section">
                 <button class="primary-action" onclick="window.open('https://direct.samsung.co.kr', '_blank')">상세 가이드 보기</button>
+                <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="share-button" onclick="shareKakao()">카카오톡 공유</button>
                 <button class="retry-button" onclick="restartTest()">다시 하기</button>
             </div>
