--- a/실버타운/index.html
+++ b/실버타운/index.html
@@ -196,7 +196,7 @@
             </div>
             
             <div class="action-buttons">
-                <button class="primary-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">상세 정보 보기</button>
+                <button class="primary-btn" onclick="window.open('https://www.bokjiro.go.kr/ssis-tbu/twataa/wlfareInfo/moveTWAT52011M.do', '_blank')">실버타운 정보 보기</button>
                 <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="kakao-share" onclick="shareKakao()">카톡 공유하기</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
