--- a/알뜰실버타운/index.html
+++ b/알뜰실버타운/index.html
@@ -207,7 +207,7 @@
             </div>
             
             <div class="action-buttons">
-                <button class="primary-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">상세 정보 보기</button>
+                <button class="primary-btn" onclick="window.open('https://www.lh.or.kr/contents/cont.do?sCode=user&mId=259&mPid=250', '_blank')">LH 고령자복지주택 신청</button>
                 <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="kakao-share" onclick="shareKakao()">카카오톡 공유</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
