--- a/운전자보험/index.html
+++ b/운전자보험/index.html
@@ -259,7 +259,7 @@
             </div>
             
             <div class="action-area">
-                <button class="detail-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">상세 보험료 비교</button>
+                <button class="detail-btn" onclick="window.open('https://direct.samsung.co.kr/product/motor/index.html', '_blank')">삼성화재 운전자보험</button>
                 <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="share-btn" onclick="shareKakao()">카카오톡 공유</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
