--- a/해외여행자보험/index.html
+++ b/해외여행자보험/index.html
@@ -253,7 +253,7 @@
             </div>
             
             <div class="action-section">
-                <button class="detail-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">즉시 가입하기</button>
+                <button class="detail-btn" onclick="window.open('https://direct.samsung.co.kr/product/travel/index.html', '_blank')">여행자보험 가입하기</button>
                 <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="share-btn" onclick="shareKakao()">카카오톡 공유</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
