--- a/노후연금/index.html
+++ b/노후연금/index.html
@@ -238,7 +238,7 @@
             </div>
             
             <div class="action-section">
-                <button class="detail-btn" onclick="window.open('https://direct.samsung.co.kr', '_blank')">연금 신청 가이드</button>
+                <button class="detail-btn" onclick="window.open('https://www.4insure.or.kr/ins4/ptl/main.do', '_blank')">연금 신청 가이드</button>
                 <button class="other-test-btn" onclick="window.location.href='../index.html'">다른 테스트 하기</button>
                 <button class="share-btn" onclick="shareKakao()">카카오톡 공유</button>
                 <button class="restart-btn" onclick="restartTest()">다시 하기</button>
