--- a/index.html
+++ b/index.html
@@ -399,6 +399,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="item-title">유튜브 음악 무료 다운로드 방법 추출 사이트</div>
             </a>
         </div>
+        <div class="item">
+            <a href="건강보험피부양자/index.html">
+                <div class="item-image">
+                    <img src="건강보험피부양자/건강보험피부양자.svg" alt="건강보험 피부양자 등록 자격상실 조건">
+                </div>
+                <div class="item-title">건강보험 피부양자 등록 자격상실 조건</div>
+            </a>
+        </div>
     </div>
 
     <!-- 카카오톡 공유 버튼 -->
