--- a/index.html
+++ b/index.html
@@ -407,6 +407,22 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="item-title">건강보험 피부양자 등록 자격상실 조건</div>
             </a>
         </div>
+        <div class="item">
+            <a href="정부지원대출/index.html">
+                <div class="item-image">
+                    <img src="정부지원대출/정부지원대출.svg" alt="정부지원대출 서민대출 종류 무직자 신용불량자">
+                </div>
+                <div class="item-title">정부지원대출 서민대출 종류 무직자 신용불량자</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="관상/index.html">
+                <div class="item-image">
+                    <img src="관상/관상.svg" alt="AI 관상 분석 얼굴 사진으로 보는 운세와 성격">
+                </div>
+                <div class="item-title">AI 관상 분석 - 얼굴 사진으로 보는 운세와 성격</div>
+            </a>
+        </div>
     </div>
 
     <!-- 카카오톡 공유 버튼 -->
