--- a/index.html
+++ b/index.html
@@ -423,6 +423,38 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                 <div class="item-title">AI 관상 분석 - 얼굴 사진으로 보는 운세와 성격</div>
             </a>
         </div>
+        <div class="item">
+            <a href="퍼스널컬러/index.html">
+                <div class="item-image">
+                    <img src="퍼스널컬러/퍼스널컬러.svg" alt="퍼스널 컬러 진단 AI가 분석하는 나만의 컬러 팔레트">
+                </div>
+                <div class="item-title">퍼스널 컬러 진단 - AI가 분석하는 나만의 컬러 팔레트</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="닮은동물/index.html">
+                <div class="item-image">
+                    <img src="닮은동물/닮은동물.svg" alt="닮은 동물 찾기 얼굴 사진으로 찾는 나의 동물상">
+                </div>
+                <div class="item-title">닮은 동물 찾기 - 얼굴 사진으로 찾는 나의 동물상</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="연예인닮은꼴/index.html">
+                <div class="item-image">
+                    <img src="연예인닮은꼴/연예인닮은꼴.svg" alt="연예인 닮은꼴 찾기 AI가 분석하는 나의 셀럽 닮은꼴">
+                </div>
+                <div class="item-title">연예인 닮은꼴 찾기 - AI가 분석하는 나의 셀럽 닮은꼴</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="아기때모습/index.html">
+                <div class="item-image">
+                    <img src="아기때모습/preview.svg" alt="아기 때 모습 예측 AI가 예측하는 당신의 어린 시절">
+                </div>
+                <div class="item-title">아기 때 모습 예측 - AI가 예측하는 당신의 어린 시절</div>
+            </a>
+        </div>
     </div>
 
     <!-- 카카오톡 공유 버튼 -->
