--- a/index.html
+++ b/index.html
@@ -456,6 +456,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </a>
         </div>
         <div class="item">
+            <a href="신용카드결제일/index.html">
+                <div class="item-image">
+                    <img src="신용카드결제일/신용카드결제일.svg" alt="신용카드 결제일 14일 추천 이유 최적 결제일">
+                </div>
+                <div class="item-title">신용카드 결제일 14일 추천 이유 최적 결제일</div>
+            </a>
+        </div>
+        <div class="item">
             <a href="관상/index.html">
                 <div class="item-image">
                     <img src="관상/관상.svg" alt="AI 관상 분석 얼굴 사진으로 보는 운세와 성격">
@@ -485,14 +493,6 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
                     <img src="연예인닮은꼴/연예인닮은꼴.svg" alt="연예인 닮은꼴 찾기 AI가 분석하는 나의 셀럽 닮은꼴">
                 </div>
                 <div class="item-title">연예인 닮은꼴 찾기 - AI가 분석하는 나의 셀럽 닮은꼴</div>
-            </a>
-        </div>
-        <div class="item">
-            <a href="아기때모습/index.html">
-                <div class="item-image">
-                    <img src="아기때모습/preview.svg" alt="아기 때 모습 예측 AI가 예측하는 당신의 어린 시절">
-                </div>
-                <div class="item-title">아기 때 모습 예측 - AI가 예측하는 당신의 어린 시절</div>
             </a>
         </div>
     </div>
