--- a/index.html
+++ b/index.html
@@ -458,9 +458,17 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
         <div class="item">
             <a href="신용카드결제일/index.html">
                 <div class="item-image">
-                    <img src="신용카드결제일/신용카드결제일.svg" alt="신용카드 결제일 14일 추천 이유 최적 결제일">
+                    <img src="신용카드결제일/신용카드결제일.svg" alt="💳 나에게 맞는 신용카드 결제일 테스트">
                 </div>
-                <div class="item-title">신용카드 결제일 14일 추천 이유 최적 결제일</div>
+                <div class="item-title">💳 나에게 맞는 신용카드 결제일 테스트</div>
+            </a>
+        </div>
+        <div class="item">
+            <a href="체크카드추천/index.html">
+                <div class="item-image">
+                    <img src="체크카드추천/체크카드추천.svg" alt="💳 체크카드 추천 순위 BEST">
+                </div>
+                <div class="item-title">💳 체크카드 추천 순위 BEST</div>
             </a>
         </div>
         <div class="item">
