--- a/관상/index.html
+++ b/관상/index.html
@@ -59,19 +59,6 @@
     <script src="https://t1.kakaocdn.net/kakao_js_sdk/2.7.2/kakao.min.js" integrity="sha384-TiCUE00h649CAMonG018J2ujOgDKW/kVWlChEuu4jK2vxfAAD0eZxzCKakxg55G4" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 상단 광고 -->
-    <div class="ad-container top">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="7854042305"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
     <!-- 헤더 -->
     <header class="header">
         <div class="container">
@@ -79,6 +66,16 @@
             <p class="subtitle">얼굴 사진으로 보는 당신의 운세와 성격</p>
         </div>
     </header>
+
+    <!-- 상단 광고 (헤더 바로 아래) - k-test 상단 -->
+    <div class="ad-section" id="ad-top" style="margin: 20px 0; text-align: center;">
+        <ins class="adsbygoogle"
+             style="display:block"
+             data-ad-client="ca-pub-9374368296307755"
+             data-ad-slot="3201247599"
+             data-ad-format="auto"
+             data-full-width-responsive="true"></ins>
+    </div>
 
     <!-- 메인 컨테이너 -->
     <main class="main-container">
@@ -147,6 +144,16 @@
                     </button>
                 </div>
             </section>
+
+            <!-- 중간 광고 (질문 중간) - k-test 슬롯2 -->
+            <div class="ad-section" id="ad-middle" style="margin: 30px 0; text-align: center; display: none;">
+                <ins class="adsbygoogle"
+                     style="display:block"
+                     data-ad-client="ca-pub-9374368296307755"
+                     data-ad-slot="1966797795"
+                     data-ad-format="auto"
+                     data-full-width-responsive="true"></ins>
+            </div>
 
             <!-- 분석 중 섹션 -->
             <section class="analyzing-section" id="analyzingSection" style="display: none;">
@@ -271,6 +278,16 @@
                             <p>당신의 관상은 전체적으로 균형이 잘 잡혀 있어 안정적인 인생을 살아갈 수 있는 좋은 관상입니다.</p>
                         </div>
                     </div>
+
+                    <!-- 결과 페이지 중간 광고 (추천 카드와 상세 혜택 사이) - k-test 슬롯3 -->
+                    <div class="ad-section" id="ad-result" style="margin: 30px 0; text-align: center; display: none;">
+                        <ins class="adsbygoogle"
+                             style="display:block"
+                             data-ad-client="ca-pub-9374368296307755"
+                             data-ad-slot="4448942166"
+                             data-ad-format="auto"
+                             data-full-width-responsive="true"></ins>
+                    </div>
                 </div>
             </section>
 
@@ -295,32 +312,6 @@
             </div>
         </div>
     </main>
-
-    <!-- 중간 광고 -->
-    <div class="ad-container middle">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="8901234567"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
-
-    <!-- 하단 광고 -->
-    <div class="ad-container bottom">
-        <ins class="adsbygoogle"
-             style="display:block"
-             data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="9012345678"
-             data-ad-format="auto"
-             data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
-    </div>
 
     <!-- 푸터 -->
     <footer class="footer">
