--- a/index.html
+++ b/index.html
@@ -472,6 +472,14 @@ In your html page, add the snippet and call gtag_report_conversion when someone 
             </a>
         </div>
         <div class="item">
+            <a href="주유할인카드/index.html">
+                <div class="item-image">
+                    <img src="주유할인카드/주유할인카드.svg" alt="⛽ 혜택큰 주유할인카드 추천">
+                </div>
+                <div class="item-title">⛽ 혜택큰 주유할인카드 추천</div>
+            </a>
+        </div>
+        <div class="item">
             <a href="관상/index.html">
                 <div class="item-image">
                     <img src="관상/관상.svg" alt="AI 관상 분석 얼굴 사진으로 보는 운세와 성격">
