--- a/건강보험피부양자/index.html
+++ b/건강보험피부양자/index.html
@@ -55,17 +55,14 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 상단 광고 -->
-    <div class="ad-container top">
+    <!-- 상단 광고 (헤더 바로 아래) -->
+    <div class="ad-section" id="ad-top" style="margin: 20px 0; text-align: center;">
         <ins class="adsbygoogle"
              style="display:block"
              data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="8257895492"
+             data-ad-slot="3201247599"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
-        <script>
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        </script>
     </div>
 
     <!-- 시작 페이지 -->
@@ -146,6 +143,16 @@
 
                 <div id="answersContainer" class="answers-grid">
                     <!-- 답변 옵션들이 동적으로 생성됩니다 -->
+                </div>
+                
+                <!-- 광고 2: 질문 중간 (3번째 질문 뒤에 표시) -->
+                <div class="ad-section" id="ad-middle" style="display: none; margin: 20px 0; text-align: center;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="1966797795"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
                 </div>
             </div>
         </div>
@@ -238,6 +245,16 @@
                     <div class="action-content">
                         <!-- 행동 가이드가 동적으로 생성됩니다 -->
                     </div>
+                </div>
+                
+                <!-- 광고 3: 결과 페이지 중간 (결과 내용과 액션 버튼 사이) -->
+                <div class="ad-section" id="ad-result" style="margin: 20px 0; text-align: center;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="4448942166"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
                 </div>
             </div>
 
