--- a/실업급여/index.html
+++ b/실업급여/index.html
@@ -58,12 +58,12 @@
     <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9374368296307755" crossorigin="anonymous"></script>
 </head>
 <body>
-    <!-- 상단 광고 -->
+    <!-- [광고] 헤더 아래 (slot: 3201247599) -->
     <div class="ad-container top">
         <ins class="adsbygoogle"
-             style="display:block"
+             style="display:block; text-align:center; margin-bottom:16px;"
              data-ad-client="ca-pub-9374368296307755"
-             data-ad-slot="1724698171"
+             data-ad-slot="3201247599"
              data-ad-format="auto"
              data-full-width-responsive="true"></ins>
     </div>
@@ -134,6 +134,15 @@
                 <h2 class="question-title" id="questionTitle"></h2>
                 <p class="question-description" id="questionDescription"></p>
                 <div class="answers-container" id="answersContainer"></div>
+                <!-- [광고] 3번째 질문 후 (slot: 1966797795) -->
+                <div class="ad-container mid" id="adAfterThirdQuestion" style="display:none; margin:24px 0; text-align:center;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="1966797795"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                </div>
             </div>
         </div>
 
@@ -192,6 +201,15 @@
                 <div class="result-icon" id="resultIcon">💼</div>
                 <h2 class="result-title" id="resultTitle"></h2>
                 <p class="result-subtitle" id="resultSubtitle"></p>
+                <!-- [광고] 결과 페이지 (slot: 4448942166) -->
+                <div class="ad-container result" id="adResultPage" style="margin:24px 0; text-align:center;">
+                    <ins class="adsbygoogle"
+                         style="display:block"
+                         data-ad-client="ca-pub-9374368296307755"
+                         data-ad-slot="4448942166"
+                         data-ad-format="auto"
+                         data-full-width-responsive="true"></ins>
+                </div>
             </div>
 
             <div class="result-content">
@@ -289,11 +307,6 @@
     </div>
 
     <script src="script.js"></script>
-    <script>
-        // 광고 초기화
-        if (typeof adsbygoogle !== 'undefined') {
-            (adsbygoogle = window.adsbygoogle || []).push({});
-        }
-    </script>
+    <!-- 광고 초기화는 script.js에서 동적으로 처리됩니다. -->
 </body>
 </html>
